After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711537 - gnome-keyring-daemon[563]: couldn't set environment variable in session: The name org.gnome.SessionManager was not provided by any .service files
gnome-keyring-daemon[563]: couldn't set environment variable in session: The ...
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-11-06 10:12 UTC by Daniel Preston
Modified: 2014-03-06 17:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daemon: Don't log debug messages to syslog (1.18 KB, patch)
2014-03-06 17:45 UTC, Stef Walter
committed Details | Review

Description Daniel Preston 2013-11-06 10:12:09 UTC
I don't start gnome-session but use gnome-keyring in another WM. I encounter the following journal message at startup:

gnome-keyring-daemon[563]: couldn't set environment variable in session: The name org.gnome.SessionManager was not provided by any .service files

What does it exactly tell me and how can I resolve this message?

Installed packages:

gnome-keyring 3.10.1-1
libgnome-keyring 3.10.1-1
Comment 1 Stef Walter 2014-03-06 17:45:55 UTC
Created attachment 271127 [details] [review]
daemon: Don't log debug messages to syslog
Comment 2 Stef Walter 2014-03-06 17:48:02 UTC
Attachment 271127 [details] pushed as 86bd8c5 - daemon: Don't log debug messages to syslog