daemon: Don't log debug messages to syslog

https://bugzilla.gnome.org/show_bug.cgi?id=711537